namespace java com.abin.lee.thrift.rpc.model


struct TeamInfo
{
  1:  i64 teamId,
  2:  string teamName,
  3:  double teamPrice,
  4:  string source,
  5:  i64 teamInventory
}



