namespace java com.abin.lee.thrift.rpc.enums
 
enum BusinessRoleEnum{
SUPER=0,
SYSTEM=1,
MANUAL=2,
ADMIN=3,
DEFAULT=4,
}


